--- a/chmc_wbms/templates/employee/includes/employee_navbar.html
+++ b/chmc_wbms/templates/employee/includes/employee_navbar.html
@@ -10,7 +10,7 @@
             </p>
         </div>
         <div class="rowprofileicono d-flex align-items-center">
-            <a href="#" data-bs-toggle="modal" data-bs-target="#accountModal{{ account.id }}" class="d-flex align-items-center">
+            <a href="#" data-bs-toggle="modal" data-bs-target="#accountModal{{ account.id }}" class="d-flex align-items-center mr-4">
             {% if user.image %}
             <img src="{{ user.image.url }}" alt="Profile Icon" class="profileiconone">
             {% else %}
