--- a/chmc_wbms/static/css/components.css
+++ b/chmc_wbms/static/css/components.css
@@ -120,8 +120,14 @@
     }
 }
 
+.curehealth-1.ui.text.size-textxs {
+    font-size: 15px;
+    color: var(--black_900);
+    font-family: Roag;
+}
+
 .ui.text {
-    font-size: 18px;
+    font-size: 30px;
     color: var(--black_900);
     font-family: Roag;
 }
@@ -158,7 +164,6 @@
 }
 
 .ui.heading.size-headinglg-logout {
-    padding-right: 30px;
     font-size: 25px;
     font-weight: 600;
     font-style: bold;
@@ -237,6 +242,6 @@
 }
 
 .ui.heading {
-    color: var(--black_900_33);
+    color: var(--black_900_7f);
     font-family: Raog;
 }
