--- a/chmc_wbms/templates/admin/admin_login.html
+++ b/chmc_wbms/templates/admin/admin_login.html
@@ -6,6 +6,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="{% static 'assets/css/bootstrap.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/light-bootstrap-dashboard.css' %} " rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/font.css' %}">
     <link rel="stylesheet" href="{% static 'css/index.css' %}">
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
@@ -34,15 +38,15 @@
                 <div class="section_form">
                     <h1 class="section_form_title ui heading size-headings">LOGIN TO YOUR ACCOUNT</h1>
                     <div class="section_form_fields">
-                        <form action="{% url 'admin_login' %}" method="POST">
+                        <form action="{% url 'employee_login' %}" method="POST">
                             {% csrf_token %}
                             <label class="section_form_input--username ui input gray_200 size-xs fill round">
                                 <input name="username" placeholder="USERNAME" type="text" required />
                             </label>
-                            <label class="section_form_input--password ui input gray_200 size-xs fill round">
+                            <label class="section_form_input--password ui input gray_200 size-xs fill round mt-3">
                                 <input name="password" placeholder="PASSWORD" type="password" required />
                             </label>
-                            <a href="{% url 'employee_login' %}" class="forgot-password-link">
+                            <a href="{% url 'employee_login' %}" class="forgot-password-link ml-5">
                                 <h2 class="ui heading size-headingxs">EMPLOYEE LOGIN</h2>
                             </a>
                             <button type="submit" class="section_form_button--login ui button blue_a100_6b size-lg fill round">
