--- a/chmc_wbms/templates/employee/employee_dashboard.html
+++ b/chmc_wbms/templates/employee/employee_dashboard.html
@@ -70,54 +70,59 @@
 
 <!-- Modal for Adding Appointment -->
 <div class="modal fade" id="appointmentModal" tabindex="-1" role="dialog" aria-labelledby="appointmentModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content one">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content two">
             <div class="modal-header">
                 <h5 class="modal-title" id="appointmentModalLabel">Schedule Appointment</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form method="post" action="{% url 'employee_dashboard' %}">
-                    {% csrf_token %}
-                    <div class="form-group">
-                        <input type="text" class="form-control" name="client_name" placeholder="Client Name" required>
-                    </div>
-                    <div class="form-group">
-                        <input type="text" class="form-control" name="description" placeholder="Description" required>
-                    </div>
-                    <div class="form-group">
-                        <label>Type of Service</label>
-                        {% for service in service_types %}
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" name="service_types" value="{{ service.id }}">
-                            <label class="form-check-label">{{ service.name }}</label>
+                <div class="container">
+                    <form method="post" action="{% url 'employee_dashboard' %}">
+                        {% csrf_token %}
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control rounded-3" name="client_name" id="floatingClientName" placeholder="Client Name" required>
+                            <label for="floatingClientName">Client Name</label>
                         </div>
-                        {% endfor %}
-                    </div>
-                    <div class="form-group">
-                        <label for="appointment-date">Appointment Date</label>
-                        <input type="date" id="appointment-date" class="form-control" name="appointment_date" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="appointment-time">Appointment Time</label>
-                        <input type="time" id="appointment-time" class="form-control" name="appointment_time" required>
-                    </div>
-                    <div class="modal-footer md-4">
-                        <button type="submit" name="add_appointment" class="btn btn-primary">Add Appointment</button>
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    </div>
-                </form>
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control rounded-3" name="description" id="floatingDescription" placeholder="Description" required>
+                            <label for="floatingDescription">Description</label>
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Type of Service</label>
+                            {% for service in service_types %}
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" name="service_types" value="{{ service.id }}" id="service{{ service.id }}">
+                                <label class="form-check-label" for="service{{ service.id }}">{{ service.name }}</label>
+                            </div>
+                            {% endfor %}
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input type="date" class="form-control rounded-3" name="appointment_date" id="floatingDate" placeholder="Appointment Date" required>
+                            <label for="floatingDate">Appointment Date</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input type="time" class="form-control rounded-3" name="appointment_time" id="floatingTime" placeholder="Appointment Time" required>
+                            <label for="floatingTime">Appointment Time</label>
+                        </div>
+                        <div class="d-flex justify-content-end mt-3">
+                            <button type="submit" name="add_appointment" class="btn btn-primary me-2">Add Appointment</button>
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
 </div>
 
+
 <!-- Bootstrap and jQuery JS -->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
 
 
 {% endblock %}
