--- a/chmc_wbms/templates/employee/employee_login.html
+++ b/chmc_wbms/templates/employee/employee_login.html
@@ -6,6 +6,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="{% static 'assets/css/bootstrap.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/light-bootstrap-dashboard.css' %} " rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/font.css' %}">
     <link rel="stylesheet" href="{% static 'css/index.css' %}">
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
@@ -39,10 +43,10 @@
                             <label class="section_form_input--username ui input gray_200 size-xs fill round">
                                 <input name="username" placeholder="USERNAME" type="text" required />
                             </label>
-                            <label class="section_form_input--password ui input gray_200 size-xs fill round">
+                            <label class="section_form_input--password ui input gray_200 size-xs fill round mt-3">
                                 <input name="password" placeholder="PASSWORD" type="password" required />
                             </label>
-                            <a href="{% url 'admin_login' %}" class="forgot-password-link">
+                            <a href="{% url 'admin_login' %}" class="forgot-password-link ml-5">
                                 <h2 class="ui heading size-headingxs">ADMIN LOGIN</h2>
                             </a>
                             <button type="submit" class="section_form_button--login ui button blue_a100_6b size-lg fill round">
